Encriptation completly working